--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<meta name="twitter:url" content="" />
 	<meta name="twitter:card" content="" />
 
-	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<!-- Place favicon.ico and apple-touch-icon.png in the root directorys -->
 	<link rel="icon" href="C:\Users\mubinshaikh\Downloads\jackson-master\jackson-master\images\favicon.png" sizes="32x32" type="image/png">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
