--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directorys -->
-	<link rel="icon" href="C:\Users\mubinshaikh\Downloads\jackson-master\jackson-master\images\favicon.png" sizes="32x32" type="image/png">
+	<link rel="icon" style="background-image: url(images/favicon.png);" sizes="32x32" type="image/png">
 
 	<link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700" rel="stylesheet">
