Changes is index file

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<div class="author-img" style="background-image: url(images/about.jfif);"></div>
 					<h1 id="colorlib-logo"><a href="index.html">Mubin Shaikh</a></h1>
 					<span class="position"><a href="#">Backend Developer</a> in Navi Mumbai</span>
-					<span class="position"><a href="#"></a>STARTUP IN WEB DEVELOPMENT</span>
+					<!-- <span class="position"><a href="#"></a>STARTUP IN WEB DEVELOPMENT</span> -->
 				</div>
 				<nav id="colorlib-main-menu" role="navigation" class="navbar">
 					<div id="navbar" class="collapse">
