--- a/index.html
+++ b/index.html
@@ -311,23 +311,23 @@
 						<div class="row">
 						</div>
 						<div class="row">
-							<div class="col-md-3 text-center animate-box">
-								<span class="colorlib-counter js-counter" data-from="0" data-to="309" data-speed="5000"
+							<!-- <div class="col-md-3 text-center animate-box">
+								<span class="colorlib-counter js-counter" data-from="0" data-to="1" data-speed="5000"
 									data-refresh-interval="50"></span>
 								<span class="colorlib-counter-label">Cups of coffee</span>
-							</div>
+							</div> -->
 							<div class="col-md-3 text-center animate-box">
-								<span class="colorlib-counter js-counter" data-from="0" data-to="356" data-speed="5000"
+								<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000"
 									data-refresh-interval="50"></span>
 								<span class="colorlib-counter-label">Projects</span>
 							</div>
 							<div class="col-md-3 text-center animate-box">
-								<span class="colorlib-counter js-counter" data-from="0" data-to="30" data-speed="5000"
+								<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000"
 									data-refresh-interval="50"></span>
 								<span class="colorlib-counter-label">Clients</span>
 							</div>
 							<div class="col-md-3 text-center animate-box">
-								<span class="colorlib-counter js-counter" data-from="0" data-to="10" data-speed="5000"
+								<span class="colorlib-counter js-counter" data-from="0" data-to="5" data-speed="5000"
 									data-refresh-interval="50"></span>
 								<span class="colorlib-counter-label">Partners</span>
 							</div>
